# PCB-X-AI

./: .claudeignore  .gitignore  README.md  start.ps1
backend/: .env.example
backend/app/: main.py
backend/app/services/: ai_narrator.py  circuit_loader.py  engine_runner.py
backend/tests/: test_circuits.py  test_runs.py
core/: CMakeLists.txt
core/src/: main.cpp
core/src/engine/: engine.cpp  engine.hpp
core/src/irdrop/: ir_solver.cpp  ir_solver.hpp
core/src/model/: circuit.cpp  circuit.hpp
core/src/placer/: placer.cpp  placer.hpp
core/src/router/: router.cpp  router.hpp
core/src/thermal/: thermal.cpp  thermal.hpp
core/tests/: circuit_parse_test.cpp  engine_test.cpp  placer_test.cpp  router_test.cpp
data/sample_circuits/: led_resistor.json  mcu_minimal.json  rc_filter.json  stress_40.json  timer_555.json
docs/superpowers/plans/: 2026-06-22-tracemind-tier-1-mvp.md
docs/superpowers/specs/: 2026-06-22-tracemind-tier-1-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: BoardView.tsx  CircuitList.tsx  CommentaryPanel.tsx  MetricsPanel.tsx  ParametersPanel.tsx
frontend/src/components/__tests__/: App.test.tsx
frontend/src/lib/: types.ts
tasks/: lessons.md  todo.md
